[package]
name = "alloy-v2"
version = "0.1.0"
authors = ["AnhQuan Nguyen <j4qfrost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sdl2-sys = { version = ">=0.33", features = ["bundled", "static-link"] }
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git" }
pistoncore-window = "0.44.0"
log = "0.4.8"

[dependencies.pistoncore-sdl2_window]
path = "../sdl2_window"

[dependencies.neovide]
path = "../neovide"

[patch.crates-io]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2.git" }
sdl2-sys = { git = "https://github.com/Rust-SDL2/rust-sdl2.git" }