[package]
name = "alloy-v2"
version = "0.1.0"
authors = ["AnhQuan Nguyen <j4qfrost@gmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
log = "0.4.8"

[dependencies.sdl2]
# path = "../rust-sdl2"
git = "https://github.com/Rust-SDL2/rust-sdl2.git"
default-features = false
features = ["image", "use_mac_framework"]

[dependencies.neovide]
# path = "../neovide"
git = "https://github.com/j4qfrost/neovide.git"
default-features = false
features = ["embed-fonts"]